# digitalcolleague

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: common.hpp  console.cpp  console.hpp  discord.cpp  discord.hpp  irc_client.cpp  irc_client.hpp  main.cpp  twitch.cpp  twitch.hpp
src/discord/: bot.cpp  bot.hpp  event.hpp  gateway.cpp  gateway.hpp  request.cpp  request.hpp  session.cpp  session.hpp  snowflake.cpp  snowflake.hpp  user.cpp  user.hpp
